--- a/zomata-clone-cover/html/index.html
+++ b/zomata-clone-cover/html/index.html
@@ -40,7 +40,9 @@
           <nav class="navbar">
             <a href="https://www.zomato.com/mobile">Get the App</a>
             <div class="navbar__menu_container">
-              <a href="#" class="link">Inventor Relations</a>
+
+
+              <a href="#" class="link">Inventors Relation</a>
               <a href="#" class="link">Add Restaurants</a>
               <a href="#" class="link">Login</a>
               <a href="./newindex.html" class="link">Sign Up</a>
