sign up page fix

--- a/zomata-clone-cover/html/index.html
+++ b/zomata-clone-cover/html/index.html
@@ -42,7 +42,7 @@
             <div class="navbar__menu_container">
 
 
-              <a href="#" class="link">Inventors Relation</a>
+              <a href="#" class="link">Inventors Relations</a>
               <a href="#" class="link">Add Restaurants</a>
               <a href="#" class="link">Login</a>
               <a href="./newindex.html" class="link">Sign Up</a>
