--- a/zomata-clone-cover/html/index.html
+++ b/zomata-clone-cover/html/index.html
@@ -55,7 +55,7 @@
 
         <div class="hero__section_container">
           <img src="./heroSectionLogo.png" alt="Zomato Logo" class="hero__section_logo"/>
-          <h1 class="hero__section_title">Discover the best food & drinks in Hampi-Hospet</h1>
+          <h1 class="hero__section_title">Discovers the best food & drinks in Hampi-Hospet</h1>
           <div class="hero__section_input_container">
             <input class="input_container_location" type="text" placeholder="Hampi-Hospet" />
             <input class="input_container_search" type="text" placeholder="Search for a restaurant, cuisine or a dish" />
