--- a/zomata-clone-cover/html/index.html
+++ b/zomata-clone-cover/html/index.html
@@ -83,7 +83,7 @@
             <img src="./item2.png" alt="card 2 img" />
             <div class="we__offer_content">
               <h2>Dining</h2>
-              <p>View the citys favourite dining venue</p>
+              <p>View the citys favourite dining venues</p>
             </div>
         </div>
 
